// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert ErrorBoundary 1`] = `
<div
  class="ant-alert ant-alert-error ant-alert-with-description ant-alert-no-icon ant-alert-flex-layout"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div>
      <div
        class="ant-alert-message"
      >
        ReferenceError: NotExisted is not defined
      </div>
      <div
        class="ant-alert-description"
      >
        <pre>
              in ThrowError
    in ErrorBoundary (created by WrapperComponent)
    in WrapperComponent
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alert could accept none react element icon 1`] = `
<div
  class="ant-alert ant-alert-success ant-alert-flex-layout"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div
      class="ant-alert-icon"
    >
      icon
    </div>
    <div>
      <div
        class="ant-alert-message"
      >
        Success Tips
      </div>
      <div
        class="ant-alert-description"
      />
    </div>
  </div>
</div>
`;

exports[`Alert rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-alert ant-alert-info ant-alert-no-icon ant-alert-flex-layout ant-alert-rtl"
  data-show="true"
  role="alert"
>
  <div
    class="ant-alert-content"
  >
    <div>
      <div
        class="ant-alert-message"
      />
      <div
        class="ant-alert-description"
      />
    </div>
  </div>
</div>
`;
